fix: set grid spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+   box-sizing: border-box;
+}
 html { overflow-y: scroll;}
 
 body { 
@@ -110,7 +113,7 @@ nav a:hover{
    width: 100%;
 }
 
-.project-gallery{
+.gallery{
    display:flex;
    flex-flow: row wrap;
    width: 100%;
@@ -130,9 +133,10 @@ nav a:hover{
    justify-content: center;
    position: relative;
    margin: 8px;
-   width: 48%;
+   width: 48.5%;
    border-radius: 16px;
 }
+
 .grid-item a{
    display: flex;
    justify-content: center;
@@ -166,7 +170,6 @@ margin-bottom: 75px;
 .date-created{
    font-weight: bold;   
 }
-
 
 .project-image{
    width:100%;
